--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,248 +3,152 @@
 html { width: 100%; height: 100% }
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, foot, thead, tr, th, td {
-	margin: 0; padding: 0; border: 0; outline: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit; vertical-align: baseline; 
-	}
-	
+    margin: 0; padding: 0; border: 0; outline: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit; vertical-align: baseline;
+}
 
-
-	
-	
 /*-- GENERAL --*/
 
 body {
-	background: url(http://www.contrib.andrew.cmu.edu/~ewbcmu/style/background_blue.jpg) repeat top left;
-	color: #7A6A53;
-	font-family: Century Gothic, sans-serif;
-	font-size: 14px;
-	margin: 0;
-	padding: 0;
-	}
-	
+    color: #7A6A53;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
 img {
-	border: none;
-	padding-top: 10px;
-	}
+    padding: 10px 0;
+}
 
 a img:hover {
-	opacity: 1;
-	}
-	
+    opacity: 1;
+}
+
 a img {
-	opacity: .8;
-	}
-	
+    opacity: .8;
+}
+
+h1, h2 {
+    color: #93abb0;
+    text-align: center;
+    font-variant: small-caps;
+    padding: 10px 0;
+}
+
 h1 {
-	color: #5E4E36;
-	font-size: 16px;
-	padding-bottom: 12.45px;
-	text-align: center;
-	text-transform: uppercase;
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 1.2em;
 }
 
 .clear { clear: both; }
 
+ul {
+    padding: none;
+}
 
+li {
+    list-style: none;
+    display: inline;
+}
 
+hr {
+    width: 33%;
+    margin: 20px auto;
+}
 
-
-/*-- HEADER --*/
-	
-#head_outer {
-	background: url(http://www.contrib.andrew.cmu.edu/~ewbcmu/style/container_head.png) no-repeat top center;
-	height: 155px;
-	margin: 0 auto;
-	width: 880px;
-	}
-
-#head_main {
-	font-size: 75px;
-	font-weight: bold;
-	line-height: 75px;
-	padding: 0 65px;
-	text-align: right;
-	white-space: nowrap;
-    }
-	
-	#head_main a:link{text-decoration: none; color: #93abb0;}
-	#head_main a:visited{text-decoration: none; color: #93abb0;}
-	#head_main a:hover{text-decoration: none; color: #93abb0;}
-
-	
-#head_sub {
-	font-size: 45px;
-	font-weight: bold;
-	padding: 0 80px;
-	position: relative;
-	top: -65px;
-	white-space: nowrap;
-    }
-	
-	#head_sub a:link{text-decoration: none; color: #d9ceb4;}
-	#head_sub a:visited{text-decoration: none; color: #d9ceb4;}
-	#head_sub a:hover{text-decoration: none; color: #d9ceb4;}
-
-	
-	
 /*-- NAVIGATION --*/
+.nav { padding: 20px 0; }
 
-#nav_outer {
-	background: url(http://www.contrib.andrew.cmu.edu/~ewbcmu/style/container_nav.png) no-repeat bottom center;
-	height: 18px;
-	margin: 0 auto;
-	padding-bottom: 37px;
-	width: 880px;
-	}
+.nav li {
+    color: #7A6A53;
+    font-size: 18px;
+    margin: 0 9px;
+    padding: 9px 9px 18px;
+}
 
-#nav_inner {
-	padding-left: 70px;
-	}
-
-.nav_link {
-	color: #7A6A53;
-	float: left;
-	font-size: 18px;
-	margin: 0 9px;
-	padding: 9px 9px 18px;
-	}
-	
-	.nav_link a:link{text-decoration: none; color: #93abb0;}
-	.nav_link a:visited{text-decoration: none; color: #93abb0;}
-	.nav_link a:hover{text-decoration: none; color: #CFDDDE;}
-	
-#nav_current {
-	background: url(http://www.contrib.andrew.cmu.edu/~ewbcmu/style/navbar.png) repeat-x top left;
-	}
+.nav li a:link{text-decoration: none; color: #93abb0;}
+.nav li a:visited{text-decoration: none; color: #93abb0;}
+.nav li a:hover{text-decoration: none; color: #CFDDDE;}
 
 #project_subnav a:link{text-decoration: none;}
 #project_subnav a:visited{text-decoration: none;}
 #project_subnav a:hover{text-decoration: none;}
 
-
-	
-	
-	
 /*-- CONTENT --*/
-	
-#content_outer {
-	background: url(http://www.contrib.andrew.cmu.edu/~ewbcmu/style/container_main.png) repeat-y top center;
-	margin: 0 auto;
-	position: relative;
-	width: 880px;
-	}
-	
-#content_inner {
-	padding: 0 75px;
-	text-align: justify;
-	}
-	
-	#content_inner p {
-		float: left;
-		padding-top: 10px;
-		}
-	
-	#content_inner .header {
-		font-size: 1.25em;
-		text-align: center;
-		padding-bottom: .83em;
-		}
-	
-	#content_inner li {
-		margin-left: 18px;
-		padding: 9px 9px 0;
-		}
-	
-	#content_inner a:link{text-decoration: underlined; color: #778C8C;}
-	#content_inner a:visited{text-decoration: underlined; color: #778C8C;}
-	#content_inner a:hover{text-decoration: underlined; color: #8DA6A6;}
-		
 
+#content {
+    width: 750px;
+    margin: 0 auto;
+}
 
-		
-		
-/*-- FOOTER --*/
-	
-#foot {
-	background: url(http://www.contrib.andrew.cmu.edu/~ewbcmu/style/container_foot.png) no-repeat top center;
-	height: 75px;
-	margin: 0 auto;
-	position: relative;
-	width: 880px;
-	}
-	
-	
-	
+#content a:link{text-decoration: underlined; color: #778C8C;}
+#content a:visited{text-decoration: underlined; color: #778C8C;}
+#content a:hover{text-decoration: underlined; color: #8DA6A6;}
 
-	
 /*-- TABLES --*/
 
 #board {
-	text-align: justify;
-	margin: 0 auto;
-	padding: 9.96px;
-	}
-	
-	#board td {
-	padding: 5.04px 18px;
-	}	
-	
-	#board th {
-	color: #5E4E36;
-	font-size: 16px;
-	padding-bottom: 12.45px;
-	text-align: center;
-	text-transform: uppercase;
-	}
-	
-	#board a:link{text-decoration: underlined; color: #778C8C;}
-	#board a:visited{text-decoration: underlined; color: #778C8C;}
-	#board a:hover{text-decoration: underlined; color: #8DA6A6;}
+    text-align: justify;
+    margin: 0 auto;
+    padding: 9.96px;
+}
 
-		
+#board td {
+    padding: 5.04px 18px;
+}
+
+#board th {
+    color: #5E4E36;
+    font-size: 16px;
+    padding-bottom: 12.45px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+#board a:link{text-decoration: underlined; color: #778C8C;}
+#board a:visited{text-decoration: underlined; color: #778C8C;}
+#board a:hover{text-decoration: underlined; color: #8DA6A6;}
+
 .project {
-	border: 1px dashed #5E4E36;
-	margin-bottom: 15px;
-	padding: 5px;
-	text-align: center;
-	}
-	
-	.project th {
-		font-size: 15px;
-		width: 50%;
-		}
-		
-	.project td {
-		vertical-align: middle;
-		}
-	
-	.descrip {
-		padding-right: 10px;
-		text-align: justify !important;
-		}
-		
-	.email {
-		width: 25%;
-		}
-		
+    border: 1px dashed #5E4E36;
+    margin-bottom: 15px;
+    padding: 5px;
+    text-align: center;
+}
+
+.project th {
+    font-size: 15px;
+    width: 50%;
+}
+
+.project td {
+    vertical-align: middle;
+}
+
+.descrip {
+    padding-right: 10px;
+}
+
+.email {
+    width: 25%;
+}
+
 #project_subnav table {
-	font-size: 13px;
-	margin: 0 auto;
-	text-align: center;
-	}
-	
-	#project_subnav td {
-		padding: 0 10px 15px;
-		}
-
-#india_vid {
-    padding-left: 45px;
+    font-size: 13px;
+    margin: 0 auto;
     text-align: center;
 }
 
-/* -- EVENTS -- */
-
-#gala_poster {
-    text-align: center;
-    width: 100%;
+#project_subnav td {
+    padding: 0 10px 15px;
 }
 
+footer {
+    font-style: italic;
+    margin: 10px 0 0 0;
+    padding: 5px 0;
+}
