--- a/stylesheet.css
+++ b/stylesheet.css
@@ -164,4 +164,10 @@ footer {
     font-style: italic;
     margin: 10px 0 0 0;
     padding: 5px 0;
+} 
+
+.announcement {
+    margin: 10px 0;
+    font-variant: small-caps;
+    border: 1px rgba(37, 37, 37, 0.6) solid;
 }
